--- a/programs/json.tt
+++ b/programs/json.tt
@@ -61,21 +61,6 @@ library json {
 		tuples;
 	}
 	
-	# Return a new tuple, initialized with the specified values.
-	function new_tuple( key value ) {
-		var ( tuple ) tup = $new( tuple );
-		let tup.key = key;
-		let tup.value = value;
-		return tup;
-	}
-
-	# Return a new empty list with the specified initial capacity.
-	function new_list( capacity ) {
-		var ( list ) this = $new( list );
-		let this.array = $array( capacity );
-		return this;
-	}
-	
 	# Return the item at the specified index.
 	function list_get( ( list ) this, idx ) {
 		if <( idx this.len ) {
@@ -87,8 +72,7 @@ library json {
 	# Add the specified value to the specified list, increasing the capacity if necessary.
 	function list_add( ( list ) this, value ) {
 		if >e( this.len $len( this.array ) ) {
-			var arr = $array( *( this.len 2 ) );
-			var idx;
+			var idx, arr = $array( *( this.len 2 ) );
 			while <( idx this.len ) {
 				let [ arr idx ] = [ this.array idx ];
 				inc idx;
@@ -121,12 +105,12 @@ library json {
 
 	# Return the next character from the specified parser, or -1 if no more are available.
 	function parser_next_char( ( parser ) this ) {
+		if =( this.current ascii.lf ) {
+			let this.line = +( this.line 1 );
+		}
 		let this.idx = +( this.idx 1 );
 		if <( this.idx $len( this.source ) ) {
 			let this.current = &( $chr( this.source this.idx ) 0xFF );
-			if =( this.current ascii.lf ) {
-				let this.line = +( this.line 1 );
-			}
 		} else {
 			let this.current = -1;
 		}
@@ -144,17 +128,17 @@ library json {
 			let this.current = -1;
 		} else {
 			let this.current = &( $chr( this.source end ) 0xFF );
-			if =( this.current ascii.lf ) {
-				let this.line = +( this.line 1 );
-			}
 		}
 		var str = $sub( this.source, this.idx, -( end this.idx ) );
 		let this.idx = end;
-		var idx = ?( $len( str ) $stridx( str, "\12", 0 ) -1 );
-		while >e( idx 0 ) {
+		var idx, len = $len( str );
+		while <( idx len ) {
+			let idx = $stridx( str, "\12", idx );
+			if <( idx 0 ) {
+				break;
+			}
 			let this.line = +( this.line 1 );
 			inc idx;
-			let idx = ?( <( idx $len( str ) ) $stridx( str, "\12", idx ) -1 );
 		}
 		return str;
 	}
@@ -214,7 +198,7 @@ library json {
 	
 	function parse_array( ( parser ) p ) {
 		call p:expect( ascii.lbracket );
-		var ( array ) arr = $new( array @write_array new_list( 1 ) );
+		var ( array ) arr = $new( array @write_array $new( list $array( 1 ) ) );
 		call p:next_char();
 		call p:skip_space();
 		while <>( p.current ascii.rbracket ) {
@@ -247,7 +231,7 @@ library json {
 	
 	function parse_object( ( parser ) p ) {
 		call p:expect( ascii.lbrace );
-		var ( object ) obj = $new( object @write_object new_list( 1 ) );
+		var ( object ) obj = $new( object @write_object $new( list $array( 1 ) ) );
 		call p:next_char();
 		call p:skip_space();
 		while <>( p.current ascii.rbrace ) {
@@ -261,7 +245,7 @@ library json {
 			call p:expect( ascii.colon );
 			call p:next_char();
 			call p:skip_space();
-			call list_add( obj.tuples new_tuple( key parse_node( p ) ) );
+			call list_add( obj.tuples $new( tuple key parse_node( p ) ) );
 			call p:skip_space();
 		}
 		call p:next_char();
@@ -299,7 +283,7 @@ library json {
 			case ascii.squote {
 				return parse_char_value( p );
 			}
-			case ascii.minus ascii.d0 ascii.d1 ascii.d2 ascii.d3 ascii.d4 ascii.d5 ascii.d6 ascii.d7 ascii.d8 ascii.d9 ascii.n {
+			case ascii.minus ascii.d0 ascii.d1 ascii.d2 ascii.d3 ascii.d4 ascii.d5 ascii.d6 ascii.d7 ascii.d8 ascii.d9 ascii.f ascii.n ascii.t {
 				return $new( value @write_value p:parse_string( "\11\12\13 ,:]}" ) );
 			}
 			default {
@@ -329,16 +313,41 @@ program json_test {
 	if <( $argc 2 ) {
 		let node = json_parse_node( json_new_parser( "[ { \"a\":1, 'b':{ \"c\": \"\\\\d\\\"\" }, 3:[[],4], 5:{6:7},-8:null}, \"str\", 1 ]" ) );
 		
+		# Write the parsed data to standard output.
 		call :node.write( $new( json_writer $function( ${ ( this, str ) { write str; } } ) ) );
 		
+		# Print some values from the tree.
 		print json_value.value( json_object_get( json_array_get( node 0 ) "a" ) );
 		var ( json_array ) arr = node;
 		var ( json_object ) obj = arr:get( 0 );
 		let obj = obj:get( "b" );
 		var ( json_value ) val = obj:get( "c" );
 		print val.value;
-		
 	} else {
 		let node = json_parse_node( json_new_parser( $load( $argv( 1 ) ) ) );
 	}
+	
+	# Create an array list and a writer that appends each character.
+	var ( json_list ) list = $new( json_list $buffer( 1 ) );
+	var ( json_writer ) writer = $new( json_writer $function( ${ ( this, str ) {
+		var idx, len = $len( str );
+		while <( idx len ) {
+			call list:add( $chr( str idx++ ) );
+		}
+	} } ) );
+	
+	# Write the parsed document.
+	call :node.write( writer );
+	# Convert the characters in the array list back to a string.
+	var str = $sub( list.array 0 list.len );
+	
+	# Reparse the string.
+	let node = json_parse_node( json_new_parser( str ) );
+	
+	# Truncate the array list and write the reparsed data back to it.
+	let list.len = 0;
+	call :node.write( writer );
+	
+	# Prints 1 if the reparsed string matches.
+	print $eq( str $sub( list.array 0 list.len ) );
 }
