--- a/programs/test.tt
+++ b/programs/test.tt
@@ -83,8 +83,11 @@ function setg( x ) {
 function testvoid() {
 }
 
-function fact( x ) {
-	return ?( <e( x 1 ) 1 *( x fact( -( x 1 ) ) ) );
+function fact( x y ) {
+	if <( x 1 ) {
+		return y;
+	}
+	return fact( -( x 1 ) *( x y ) );
 }
 
 function testprint() {
@@ -1181,7 +1184,7 @@ program test {
 	call testprint();
 	call testarray();
 	call testbuffer();
-	call assert( =( fact( 3 ) 6 ), ${-} );
+	call assert( =( fact( 3 1 ) 6 ), ${-} );
 	call testswitch();
 	call testif();
 	call testwhile();
