--- a/programs/test.tt
+++ b/programs/test.tt
@@ -572,8 +572,8 @@ function testint() {
 	call assert_equals( 1, $int( "1" ), ${-} );
 	call assert_equals( 10, $int( "0xA" ), ${-} );
 	call assert_equals( 8, $int( "010" ), ${-} );
-	call assert_equals( -256, $int( "0xFFFFFF00" ), ${-} );
-	call assert_equals( 256, $int( "-0xFFFFFF00" ), ${-} );
+	call assert_equals( 0xFFFFFF00, $int( "0xFFFFFF00" ), ${-} );
+	call assert_equals( -0xFFFFFF00, $int( "-0xFFFFFF00" ), ${-} );
 	call assert_throws( "1", ${ () { call $int( except( ${ 1 } ) ); } } );
 	call assert_throws( "Unable to convert", ${ () { call $int( "a" ); } } );
 }
