--- a/programs/test.tt
+++ b/programs/test.tt
@@ -235,14 +235,31 @@ function testif() {
 	if "" { let x = 2; }
 	call assert_equals( 2, x, ${-} );
 	if <( y z ) {} else { call assert( FALSE, ${-} ); }
-	if <e( y z ) {} else { call assert( FALSE, ${-} ); }
-	if >( y z ) { call assert( FALSE, ${-} ); }
-	if >e( y z ) { call assert( FALSE, ${-} ); }
-	if =( y z ) { call assert( FALSE, ${-} ); }
-	if <>( y z ) {} else { call assert( FALSE, ${-} ); }
+	if <( y y ) { call assert( FALSE, ${-} ); } else { call 0; }
 	if <( y 1 ) {} else { call assert( FALSE, ${-} ); }
+	if <( y 0 ) { call assert( FALSE, ${-} ); } else { call 0; }
 	if <( y ONE ) {} else { call assert( FALSE, ${-} ); }
 	if <( y $len( STR ) ) {} else { call assert( FALSE, ${-} ); }
+	if <e( y y ) {} else { call assert( FALSE, ${-} ); }
+	if <e( z y ) { call assert( FALSE, ${-} ); }
+	if <e( y 1 ) {} else { call assert( FALSE, ${-} ); }
+	if <e( z 0 ) { call assert( FALSE, ${-} ); }
+	if >( y z ) { call assert( FALSE, ${-} ); }
+	if >( z y ) {} else { call assert( FALSE, ${-} ); }
+	if >( y 1 ) { call assert( FALSE, ${-} ); }
+	if >( z 0 ) {} else { call assert( FALSE, ${-} ); }
+	if >e( y z ) { call assert( FALSE, ${-} ); }
+	if >e( y y ) {} else { call assert( FALSE, ${-} ); }
+	if >e( y 1 ) { call assert( FALSE, ${-} ); }
+	if >e( y 0 ) {} else { call assert( FALSE, ${-} ); }
+	if =( y z ) { call assert( FALSE, ${-} ); }
+	if =( y y ) {} else { call assert( FALSE, ${-} ); }
+	if =( y 1 ) { call assert( FALSE, ${-} ); }
+	if =( y 0 ) {} else { call assert( FALSE, ${-} ); }
+	if <>( y z ) {} else { call assert( FALSE, ${-} ); }
+	if <>( y y ) { call assert( FALSE, ${-} ); }
+	if <>( y 1 ) {} else { call assert( FALSE, ${-} ); }
+	if <>( y 0 ) { call assert( FALSE, ${-} ); }
 	call assert_throws( "1", ${ () { if except( ${ 1 } ) { call except( ${ 2 } ); } } } );
 	call assert_throws( "Expected '{'", ${ () { if 0 {} else } } );
 	call assert_throws( "Not a number", ${ () { var x = ""; if <( x 0 ) {} } } );
@@ -274,6 +291,14 @@ function testwhile() {
 		call assert( FALSE, ${-} );
 	}
 	call assert_equals( 1, :( $function( ${ () { while TRUE { return 1; } return 0; } } ) ), ${-} );
+	call assert_equals( 1, :( $function( ${ () { while TRUE { break; } return 1; } } ) ), ${-} );
+	call assert_throws( STR, ${ () { while TRUE { throw STR; } return 0; } } );
+	call assert_equals( 1, :( $function( ${ ( x ) { while =( x x ) { return 1; } return 0; } } ) 1 ), ${-} );
+	call assert_equals( 1, :( $function( ${ ( x ) { while =( x x ) { break; } return 1; } } ) 1 ), ${-} );
+	call assert_throws( STR, ${ () { var x; while =( x x ) { throw STR; } return 0; } } );
+	call assert_equals( 1, :( $function( ${ ( x ) { while =( x 1 ) { return 1; } return 0; } } ) 1 ), ${-} );
+	call assert_equals( 1, :( $function( ${ ( x ) { while =( x 1 ) { break; } return 1; } } ) 1 ), ${-} );
+	call assert_throws( STR, ${ () { var x; while =( x 0 ) { throw STR; } return 0; } } );
 	var off, end = 10;
 	while <( off end ) {
 		var aaa, bbb = 1;
@@ -285,18 +310,25 @@ function testwhile() {
 	call assert_equals( 10, aaa, ${-} );
 	call assert_equals( 0, bbb, ${-} );
 	while <( z y ) { call assert( FALSE, ${-} ); }
-	while <e( z y ) { call assert( FALSE, ${-} ); }
-	while >( y z ) { call assert( FALSE, ${-} ); }
-	while >e( y z ) { call assert( FALSE, ${-} ); }
-	while =( y z ) { call assert( FALSE, ${-} ); }
-	while <>( y y ) { call assert( FALSE, ${-} ); }
 	while <( z 0 ) { call assert( FALSE, ${-} ); }
+	while <e( z y ) { call assert( FALSE, ${-} ); }
+	while <e( z 0 ) { call assert( FALSE, ${-} ); }
+	while >( y z ) { call assert( FALSE, ${-} ); }
+	while >( y 1 ) { call assert( FALSE, ${-} ); }
+	while >e( y z ) { call assert( FALSE, ${-} ); }
+	while >e( y 1 ) { call assert( FALSE, ${-} ); }
+	while =( y z ) { call assert( FALSE, ${-} ); }
+	while =( y 1 ) { call assert( FALSE, ${-} ); }
+	while <>( y y ) { call assert( FALSE, ${-} ); }
+	while <>( y 0 ) { call assert( FALSE, ${-} ); }
 	while <( z NUL ) { call assert( FALSE, ${-} ); }
 	while <( z $len( "" ) ) { call assert( FALSE, ${-} ); }
+	while y { call assert( FALSE, ${-} ); }
 	call assert_throws( "1", ${ () { while except( ${ 1 } ) { call assert( FALSE, ${-} ); } } } );
 	call assert_throws( "1", ${ () { while TRUE { call except( ${ 1 } ); } } } );
 	call assert_throws( "Unhandled 'break'", ${ () { break; } } );
 	call assert_throws( "Not a number", ${ () { var x = ""; while <( x x ) {} } } );
+	call assert_throws( "Not a number", ${ () { var x = ""; while <( x 1 ) {} } } );
 }
 
 function testuntil() {
@@ -1080,18 +1112,6 @@ function testoptimizer() {
 	call assert_equals( 2, acc, ${-} );
 	let acc = >>( 2 ONE );
 	call assert_equals( 1, acc, ${-} );
-	let acc = <>( 2 ONE );
-	call assert_equals( 1, acc, ${-} );
-	let acc = <( 1 ONE );
-	call assert_equals( 0, acc, ${-} );
-	let acc = <e( 1 ONE );
-	call assert_equals( 1, acc, ${-} );
-	let acc = =( 1 ONE );
-	call assert_equals( 1, acc, ${-} );
-	let acc = >e( 1 ONE );
-	call assert_equals( 1, acc, ${-} );
-	let acc = >( 1 ONE );
-	call assert_equals( 0, acc, ${-} );
 	let acc = &( 3 1 );
 	call assert_equals( 1, acc, ${-} );
 	let acc = |( 0 1 );
@@ -1114,18 +1134,6 @@ function testoptimizer() {
 	call assert_equals( 2, acc, ${-} );
 	let acc = >>( 2 1 );
 	call assert_equals( 1, acc, ${-} );
-	let acc = <>( 2 1 );
-	call assert_equals( 1, acc, ${-} );
-	let acc = <( 1 1 );
-	call assert_equals( 0, acc, ${-} );
-	let acc = <e( 1 1 );
-	call assert_equals( 1, acc, ${-} );
-	let acc = =( 1 1 );
-	call assert_equals( 1, acc, ${-} );
-	let acc = >e( 1 1 );
-	call assert_equals( 1, acc, ${-} );
-	let acc = >( 1 1 );
-	call assert_equals( 0, acc, ${-} );
 	let acc = &( 3 one );
 	call assert_equals( 1, acc, ${-} );
 	call assert_throws( "Not a number", ${ () { var s = ""; let s = &( 3 s ); } } );
@@ -1158,24 +1166,6 @@ function testoptimizer() {
 	let acc = >>( 2 one );
 	call assert_equals( 1, acc, ${-} );
 	call assert_throws( "Not a number", ${ () { var s = ""; let s = >>( 3 s ); } } );
-	let acc = <>( 2 one );
-	call assert_equals( 1, acc, ${-} );
-	call assert_throws( "Not a number", ${ () { var s = ""; let s = <>( 3 s ); } } );
-	let acc = <( 1 one );
-	call assert_equals( 0, acc, ${-} );
-	call assert_throws( "Not a number", ${ () { var s = ""; let s = <( 3 s ); } } );
-	let acc = <e( 1 one );
-	call assert_equals( 1, acc, ${-} );
-	call assert_throws( "Not a number", ${ () { var s = ""; let s = <e( 3 s ); } } );
-	let acc = =( 1 one );
-	call assert_equals( 1, acc, ${-} );
-	call assert_throws( "Not a number", ${ () { var s = ""; let s = =( 3 s ); } } );
-	let acc = >e( 1 one );
-	call assert_equals( 1, acc, ${-} );
-	call assert_throws( "Not a number", ${ () { var s = ""; let s = >e( 3 s ); } } );
-	let acc = >( 1 one );
-	call assert_equals( 0, acc, ${-} );
-	call assert_throws( "Not a number", ${ () { var s = ""; let s = >( 3 s ); } } );
 }
 
 function teststack() {
