--- a/programs/qsort.tt
+++ b/programs/qsort.tt
@@ -24,10 +24,10 @@ function new_number( value ) {
 }
 
 # Sort an array of comparable instances.
-function qsort( array offset len ) {
+function qsort( array offset end ) {
 	var idx = offset, pivot_idx = idx++;
 	var ( comparable ) pivot = [ array pivot_idx ];
-	while <( idx len ) {
+	while <( idx end ) {
 		if >( :pivot.compare( [ array idx ] ) 0 ) {
 			let [ array pivot_idx++ ] = [ array idx ];
 			let [ array idx ] = [ array pivot_idx ];
@@ -35,21 +35,34 @@ function qsort( array offset len ) {
 		}
 		inc idx;
 	}
-	if >( -( pivot_idx offset ) 1 ) {
-		call qsort( array offset pivot_idx );
+	# Select the smallest region for recursion.
+	if <( -( pivot_idx offset ) -( end pivot_idx ) ) {
+		if >( -( pivot_idx offset ) 1 ) {
+			call qsort( array offset pivot_idx );
+		}
+		let offset = +( pivot_idx 1 );
+	} else {
+		if >( -( end pivot_idx ) 2 ) {
+			call qsort( array +( pivot_idx 1 ) end );
+		}
+		let end = pivot_idx;
 	}
-	if >( -( len pivot_idx ) 2 ) {
-		call qsort( array +( pivot_idx 1 ) len );
+	if <( -( end offset ) 2 ) {
+		return 0;
 	}
+	# Tail-call.
+	return qsort( array offset end );
 }
 
 function sorted( comparables ) {
 	var idx, len = $len( comparables );
 	var ( comparable ) prev = [ comparables idx++ ];
 	while <( idx len ) {
-		if >( :prev.compare( [ comparables idx++ ] ) 0 ) {
+		var ( comparable ) curr = [ comparables idx++ ];
+		if >( :prev.compare( curr ) 0 ) {
 			return FALSE;
 		}
+		let prev = curr;
 	}
 	return TRUE;
 }
@@ -62,8 +75,19 @@ function numbers( array ) {
 	return out;
 }
 
+function random( len ) {
+	var array = $array( len ), idx, seed;
+	while <( idx len ) {
+		let seed = &( +( *( seed 65 ) 17 ) 0x1FFFFFFF );
+		#let [ array idx++ ] = -( len idx );
+		#let [ array idx ] = idx++;
+		let [ array idx++ ] = seed;
+	}
+	return array;
+}
+
 program test {
-	var array = numbers( $array( 20 9 0 8 1 7 2 6 3 5 4 4 5 6 3 7 2 8 1 9 0 ) );
+	var array = numbers( random( 65536 ) );
 	print sorted( array );
 	call qsort( array 0, $len( array ) );
 	print sorted( array );
