--- a/programs/test.tt
+++ b/programs/test.tt
@@ -114,7 +114,7 @@ function testvars( x ) {
 	call assert_equals( 0, FALSE, ${-} );
 	call assert_throws( "Name 'a' already defined", ${ () { var a; } } );
 	call assert_throws( "Undeclared variable 'xxx'", ${ () { let xxx = 0; } } );
-	call assert_throws( "Expected '=' after 'let'", ${ () { let xxx; } } );
+	call assert_throws( "Expected '=' after 'xxx'", ${ () { let xxx; } } );
 	call assert_throws( "Invalid local variable expression", ${ (x) { call x+; } } );
 	call assert_throws( "Invalid number", ${ () { var x = 1$2; } } );
 	call assert_throws( "Not a number", ${ () { var x = "x"; call x++; } } );
