--- a/programs/test.tt
+++ b/programs/test.tt
@@ -391,6 +391,7 @@ function testinfix() {
 	call assert_equals( 3, '( +( ONE 0 ) + ONE ONE ), ${-} );
 	call assert_throws( "Invalid", ${ () { call '(); } } );
 	call assert_throws( "Unhandled", ${ () { call '( 1 ); } } );
+	call assert_throws( "Unhandled", ${ () { call '( 1 ' + 1 ); } } );
 	call assert_throws( "Unexpected", ${ () { call '( 1 0 ); } } );
 	call assert_throws( "Wrong number of arguments", ${ () { call '( 1 + ); } } );
 }
