--- a/programs/test.tt
+++ b/programs/test.tt
@@ -113,7 +113,7 @@ function testvars( x ) {
 	call assert_equals( 1, TRUE, ${-} );
 	call assert_equals( 0, FALSE, ${-} );
 	call assert_throws( "Name 'var' already d", ${ () { var var; } } );
-	call assert_throws( "Undeclared variable 'xxx'", ${ () { let xxx = 0; } } );
+	call assert_throws( "Undeclared variable 'xxx:", ${ () { let xxx: = 0; } } );
 	call assert_throws( "Expected '=' after 'xxx'", ${ () { let xxx; } } );
 	call assert_throws( "Invalid local variable expression", ${ (x) { call x+; } } );
 	call assert_throws( "Invalid number", ${ () { var x = 1$2; } } );
@@ -985,6 +985,7 @@ function testmembercall() {
 	call assert_equals( 1, obj:geta(), ${-} );
 	call assert_equals( 2, obj:getg(), ${-} );
 	call assert_equals( 0, ext:geta(), ${-} );
+	call assert_throws( "Expression", ${ () { var x; call x:xxx(); } } );
 	call assert_throws( "Member function", ${ () { var ( exten ) x; call x:xxx(); } } );
 	call assert_throws( "Expected '('", ${ () { var ( exten ) x; call x:geta; } } );
 	call assert_throws( "Wrong number", ${ () { var ( exten ) x; call x:geta(0); } } );
@@ -1247,6 +1248,13 @@ function testscope() {
 	var fact = "f";
 	call assert_equals( "f", fact, ${-} );
 	call assert_equals( 2, fact!( 0 2 ), ${-} );
+	call assert_throws( "Unhandled expression", ${ ( fact ) { call fact!xxx(); } } );
+	var g = 1;
+	let g! = 0;
+	call assert_equals( 1, g, ${-} );
+	call assert_equals( 0, g!, ${-} );
+	let ext.a = 1;
+	call assert_equals( 1, ext!:geta(), ${-} );
 }
 
 program test {
